# browser-next

./: README.md  package.json  pnpm-lock.yaml
app/: .npmrc  electron-builder.json  main.esm.js  main.esm.js.map  main.js  main.js.map  package.json  pnpm-lock.yaml
app/lib/: index.js  native.win32-x64-msvc.node
app/preload/: main.js  view.js
app/renderer/: index.html  newtab.html
app/renderer/css/: main-BlE-shwH.css
app/renderer/js/: _plugin-vue_export-helper-9Ot2C8Vz.js  main-DDHIIl7M.js  newtab-ChH8qeja.js
app/template/: debug.html  develop.html  electron.js  main.html
docs/chrome-tabs/: index4.html  index5.html
main/: .gitignore  build.mjs  debug.mjs  package.json  pnpm-lock.yaml  readme.md  rolldown.config.mjs  rollup.config.mjs  tsconfig.json
main/src/: app.js  app.ts  index.js  index.ts  logger.js  logger.ts  types.d.ts
main/src/app/: scheme.ts  window-session.ts  window.js  window.ts
main/src/data/: index.ts
native/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  readme.md
native/lib/: browser-native.win32-x64-msvc.node  index.d.ts  index.js  native.win32-x64-msvc.node
native/src/: lib.rs
native/src/database/: mod.rs
native/src/db/: mod.rs
native/test/: db.js  index.js
preload/: .gitignore  package.json  pnpm-lock.yaml  readme.md  rolldown.config.mjs  rollup.config.mjs
preload/src/: main.js  view.js
renderer/: package.json  pnpm-lock.yaml  readme.md  unocss.config.js  vite.config.js
renderer/plugin/: index.js  template.js  unplugin.js
renderer/public/: index.html
scripts/: build.mjs  build.sh  start.mjs  start.sh
(+39 files in other folders)
