[package]
edition = "2021"
name = "native"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.208"
serde_json = "1.0.125"
base64 = "0.22.1"

[dependencies.napi]
version = "2.16.9"
features = ["napi9", "serde-json"]

[dependencies.napi-derive]
version = "2.16.11"
features = ["type-def"]

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled"]

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
